<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >


    <!--Toolbar-->
    <androidx.appcompat.widget.Toolbar
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/toolbar"
    android:background="@color/light_black"
    app:titleTextColor="@color/white"
        />

    <!--Tab Layout-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabTextAppearance="@style/TabFont"
        app:tabIconTint="@color/light_grey"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/light_grey"
        app:tabBackground="@drawable/selector"
        android:background="@color/light_black"
        android:padding="0dp"
        app:tabIndicatorHeight="0dp"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_tab" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/settings_icon"
            />
    </com.google.android.material.tabs.TabLayout>
<!--Line-->
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/bright_blue"/>
<!--Row One-->
    <LinearLayout
        android:id="@+id/rowOneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        >

<!--Top Left Square-->
        <LinearLayout
            android:id="@+id/blockOne"
            android:layout_width="185dp"
            android:layout_height="187dp"
            android:layout_margin="10dp"
            android:background="@color/light_green"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:drawableLeft="@drawable/shopping_cart"
                android:text="@string/shopping_list"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />



                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="145dp"
                    android:layout_height="38dp"
                    android:text="@string/eggs"
                    android:drawableLeft="@drawable/egg1"/>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/bread"
                android:drawableLeft="@drawable/bread"/>

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="159dp"
                android:layout_height="38dp"
                android:drawableLeft="@drawable/strawberry"
                android:text="@string/strawberry" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="151dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/kiwi"
                android:text="@string/kiwi" />



        </LinearLayout>
<!--Top Right Square-->
        <LinearLayout
            android:id="@+id/blockTwo"
            android:layout_width="185dp"
            android:layout_height="187dp"
            android:layout_margin="10dp"
            android:background="@color/sandy_orange"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/to_do_list"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:drawableLeft="@drawable/sleep"
                android:text="Sleep More"
                android:textColor="@color/black"
                android:textSize="16dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:drawableLeft="@drawable/sunflower"
                android:text="Gardening"
                android:textColor="@color/black"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:drawableLeft="@drawable/book"
                android:text="Read A Book"
                android:textColor="@color/black"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:drawableLeft="@drawable/guitar"
                android:text="Learn Guitar"
                android:textColor="@color/black"
                android:textSize="16dp"
                />

        </LinearLayout>



    </LinearLayout>

<!--Row Two-->
    <LinearLayout
        android:id="@+id/rowTwoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<!--Middle Left Square-->
        <LinearLayout
            android:id="@+id/blockThree"
            android:layout_width="185dp"
            android:layout_height="187dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/coral"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/diary"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/lock"
                android:paddingTop="35dp"/>


        </LinearLayout>
<!--Middle Right Square-->
        <LinearLayout
            android:id="@+id/blockFour"
            android:layout_width="185dp"
            android:layout_height="187dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/bright_blue"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/adopt"
                android:drawableRight="@drawable/paperclip"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="Call 011-21853456"
                android:textColor="@color/black"
                android:textSize="18dp"
                 />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="3"
                android:rowCount="2">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="58dp"
                    android:layout_height="51dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    app:srcCompat="@drawable/kitty5"
                    />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="65dp"
                    android:layout_height="68dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    app:srcCompat="@drawable/kitty1"
                    />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="50dp"
                    android:layout_height="65dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    app:srcCompat="@drawable/kitty2" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="65dp"
                    android:layout_height="66dp"
                    android:layout_row="0"
                    android:layout_column="2"
                    app:srcCompat="@drawable/kitty3" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    app:srcCompat="@drawable/kitty4" />
            </GridLayout>

        </LinearLayout>




    </LinearLayout>

    <!--Row Three-->
    <LinearLayout
        android:id="@+id/rowThreeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<!--Bottom Left Square-->
        <LinearLayout
            android:id="@+id/blockFive"
            android:layout_width="185dp"
            android:layout_height="187dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/bright_yellow"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/train"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="NYC Manhattan 4:30PM"
                android:textColor="@color/black"
                android:textSize="18dp" />
        </LinearLayout>
<!--Bottom Right Square-->
        <LinearLayout
            android:id="@+id/blockSix"
            android:layout_width="185dp"
            android:layout_height="187dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/bright_purple"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/homework"
                android:drawableRight="@drawable/paperclip"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/bee" />
        </LinearLayout>


    </LinearLayout>

    <!--Nav Drawer-->

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="211dp"
        tools:openDrawer="start">


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"

            android:fitsSystemWindows="true"
            app:headerLayout="@layout/header_layout"
            app:menu="@menu/menu_layout" />
    </androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>